kubernetes/apps/media/sonarr/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sonarr.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - sonarr.krapulax.dev
  rules:
    - backendRefs:
        - name: sonarr
          namespace: media
          port: 8989
